--- a/index.html
+++ b/index.html
@@ -8,4 +8,45 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="LogIn">
+        <div class="div">
+            <p>Физическое лицо</p>
+        </div>
+        <div class="div">
+            <p>Иванов Иван Иванович</p>
+        </div>
+        <div class="div">
+            <p>Серия и номер паспорта:</p>
+            <p>1111 11111111</p>
+        </div>
+        <div class="div">
+            <p>Адрес:</p>
+            <p>город Москва, улица Советская, дом 1, квартира 1</p>
+        </div>
+        <div class="div">
+            <p>ИНН:</p>
+            <p>325507450247</p>
+        </div>
+        <div class="div">
+            <p>Номер телефона:</p>
+            <p>+79814430052</p> 
+        </div>
+    </div>
+    <div class="LogIn">
+        <div class="div">
+            <p>Юридическое лицо</p>    
+        </div>
+        <div class="div">
+            <p></p>
+        </div>
+        <div class="div">
+            <p></p>
+        </div>
+        <div class="div">
+            <p></p>
+        </div>
+        <div class="div">
+            <p></p>
+        </div>
+    </div>
 </body>
