--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="div">
             <p>Серия и номер паспорта:</p>
-            <p>1111 11111111</p>
+            <p>1234 123456</p>
         </div>
         <div class="div">
             <p>Адрес:</p>
@@ -25,7 +25,7 @@
         </div>
         <div class="div">
             <p>ИНН:</p>
-            <p>325507450247</p>
+            <p>987654231098</p>
         </div>
         <div class="div">
             <p>Номер телефона:</p>
@@ -37,16 +37,19 @@
             <p>Юридическое лицо</p>    
         </div>
         <div class="div">
-            <p></p>
+            <p>ООО "Однако"</p>
         </div>
         <div class="div">
-            <p></p>
+            <p>ОГРН:</p>
+            <p>1234567890123</p>
         </div>
         <div class="div">
-            <p></p>
+            <p>Адрес:</p>
+            <p>г. Звёздный, ул. Солнечного зайчика, дом 11</p>
         </div>
         <div class="div">
-            <p></p>
+            <p>ИНН:</p>
+            <p>123456789012</p>
         </div>
     </div>
 </body>
