добавлен фон, и отредактирован размер

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
+    <p id="send">Пользователи</p>
     <div class="LogIn">
         <div class="div">
             <p>Физическое лицо</p>
