сделала каждый пункт в отдельной строке

--- a/index.html
+++ b/index.html
@@ -11,46 +11,46 @@
     <p id="send">Пользователи</p>
     <div class="LogIn">
         <div class="div">
-            <p>Физическое лицо</p>
+            <p><b>Физическое лицо</b></p>
         </div>
         <div class="div">
             <p>Иванов Иван Иванович</p>
         </div>
         <div class="div">
-            <p>Серия и номер паспорта:</p>
-            <p>1234 123456</p>
+            <p>Серия и номер паспорта</p>
+            <p class="p">1234 123456</p>
         </div>
         <div class="div">
-            <p>Адрес:</p>
-            <p>город Москва, улица Советская, дом 1, квартира 1</p>
+            <p>Адрес</p>
+            <p class="p">город Москва, улица Советская, дом 1, квартира 1</p>
         </div>
         <div class="div">
-            <p>ИНН:</p>
-            <p>987654231098</p>
+            <p>ИНН</p>
+            <p class="p">987654231098</p>
         </div>
         <div class="div">
-            <p>Номер телефона:</p>
-            <p>+79814430052</p> 
+            <p>Номер телефона</p>
+            <p class="p">+79814430052</p> 
         </div>
     </div>
     <div class="LogIn">
         <div class="div">
-            <p>Юридическое лицо</p>    
+            <p><b>Юридическое лицо</b></p>    
         </div>
         <div class="div">
             <p>ООО "Однако"</p>
         </div>
         <div class="div">
-            <p>ОГРН:</p>
-            <p>1234567890123</p>
+            <p>ОГРН</p>
+            <p class="p">1234567890123</p>
         </div>
         <div class="div">
-            <p>Адрес:</p>
-            <p>г. Звёздный, ул. Солнечного зайчика, дом 11</p>
+            <p>Адрес</p>
+            <p class="p">г. Звёздный, ул. Солнечного зайчика, дом 11</p>
         </div>
         <div class="div">
-            <p>ИНН:</p>
-            <p>123456789012</p>
+            <p>ИНН</p>
+            <p class="p">123456789012</p>
         </div>
     </div>
 </body>
